--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nhaccuatui-api": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
